Fixed front-end issues with app. Made front-end more readable and updated some color schemes.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,17 +31,14 @@ body{
 .card-space{
   width: 100%;
   padding: 0;
-  border: 2px red solid;
-
+  border: 2px #ff8585 solid;
+  background-color: inherit;
+  color: #99f0a3;
 }
 
 .boxing{
   box-sizing: inherit;
 }
-
-/* *, ::after, ::before {
-    box-sizing: inherit;
-} */
 
 ul.boxing{
   padding-inline-start: 5px;
@@ -56,14 +53,29 @@ main#list.col-16.col-md-9.col-xl-12.py-md-3.pl-md-5{
   padding-left: 0;
 }
 
-.fulltab{
+div.fulltab{
   position: sticky;
-  top: 60px;
+  z-index: 2;
+  top: 55px;
   color: white;
-  margin-top: 60px;
+  margin-top: 55px;
 }
-
+div.row{
+  position: relative;
+  z-index: 1;
+}
 #totalRows{
   margin-left: 20px;
   color: white;
+}
+a:not([href]):not([tabindex]) {
+  color: #6ba4ff;
+  cursor: pointer;
+}
+div.filterMenu a{
+  color: #99f0a3;
+}
+div.filterMenu{
+  position: fixed;
+  max-width: inherit;
 }
